[package]
name = "modest_sys"
description = "Modest bindgen wrapper for Rust (https://github.com/lexborisov/Modest)"
version = "0.1.1"
license = "LGPL"
authors = ["Alexey Voznyuk <me@swizard.info>"]
categories = ["external-ffi-bindings"]

build = "build.rs"

[build-dependencies]
gcc = "0.3.10"

[dependencies]
